<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Welcome"
            android:textColor="#1565C0"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="12dp"
            android:text="@string/Tagline"
            android:textColor="#9e9e9e"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/name_text_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/Name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/text_view"
            style="@style/headerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/Toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/WhippedCream" />

        <CheckBox
            android:id="@+id/chocochips_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Chocochips" />

        <CheckBox
            android:id="@+id/waffles_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Waffles" />

        <CheckBox
            android:id="@+id/cinnamon_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Cinnamon" />

        <CheckBox
            android:id="@+id/Nutella_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/Nutella" />

        <TextView
            android:id="@+id/quantity_text"
            style="@style/headerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/Quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qty_decrement_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="12dp"
                android:onClick="qtyDecrement"
                android:text="@string/Minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/One"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/qty_increment_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="12dp"
                android:onClick="qtyIncrement"
                android:text="@string/Plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/₹_text_view"
            style="@style/headerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ORDER_SUMMARY" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingLeft="2dp"
            android:text="@string/Zero"
            android:textColor="#000000"
            android:textSize="16sp" />

        <com.github.rubensousa.raiflatbutton.RaiflatButton
            android:id="@+id/button_id"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:onClick="submitOrder"
            android:text="@string/Order" />

    </LinearLayout>

</ScrollView>
